--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;500;700&display=swap" rel="stylesheet">
     <title>Gradientti</title>
-    <script type="module" crossorigin src="/gradientti/assets/index.f320ecc4.js"></script>
-    <link rel="stylesheet" href="/gradientti/assets/index.01e2ffdd.css">
+    <script type="module" crossorigin src="/gradientti/assets/index.7cc3840f.js"></script>
+    <link rel="stylesheet" href="/gradientti/assets/index.6015eb39.css">
   </head>
   <body>
     <div id="root"></div>
